--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Who is Dick Bickings?</h1>
+    <img src="./assets/images/Dick Bickings.png" height="200" alt="Dick Bickings Portrait"/>
+    <hr/>
     <h2>Summary:</h2>
     <p>I am a man whose whole life is devoted to Jesus Christ and as a result, everything I do whether it is preaching a sermon, being a devoted husband, father, granfather, or great-grandfather, or if it is coding a website, it will be done for the glory of my Lord and Savior Jesus Christ!</p>
     <h2>Education:</h2>
@@ -23,7 +25,7 @@
         <li>Worked as Operations and Maintenance Manager form Conectiv Energy Corporation, Bethlehem, PA, USA, from 2001-2008</li>
         <li>Developed programs in the various work places to automate spreadsheets, track outputs, and monitor emmissions.</li>
         <li>Worked as Pastor of Disicipleship at Ebenezeer Bible Fellowship Church in Bethlehem, PA, USA, from 2009-2020.</li>
-        <li>Programed and built a relational database, and built a mobile that was deployed on both IOS and Android for the same church above.</li>
+        <li>Programed and built a relational database, and a mobile app that was deployed on both IOS and Android for the church above.</li>
         <li>Worked as Senior Pastor at New Life Bible Felowship Church in Millsboro DE, USA from 2002-present.</li>
         <li>Built the above church website and am working on building a church app.</li>
     </ul>
@@ -39,5 +41,11 @@
         <li>Charles Ryie Award: best work done in theology</li>
         <li>Personal Best Award: cash awards, presented twice for programming skills to develop work apps</li>
     </ul>
+    <a href="./public/contact.html">Contact</a>
+    <a href="./public/hobbies.html">Hobbies</a>
+    <hr/>
+    <footer center="true">
+        Copyright © 2024 Richard Bickings. All Rights Reserved.
+    </footer>
 </body>
 </html>
