--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <a href="./public/contact.html">Contact</a>
     <a href="./public/hobbies.html">Hobbies</a>
     <hr/>
-    <footer center="true">
+    <footer>
         Copyright © 2024 Richard Bickings. All Rights Reserved.
     </footer>
 </body>
