--- a/public/contact.html
+++ b/public/contact.html
@@ -13,6 +13,8 @@
         Address: 28273 Basin Rd., Millsboro, DE, USA <br/>
         Email: dick.bickings@gmail.com
     </p>
-    
+  <footer>
+        Copyright © 2024 Richard Bickings. All Rights Reserved.
+    </footer>  
 </body>
 </html>
