--- a/public/hobbies.html
+++ b/public/hobbies.html
@@ -16,6 +16,8 @@
         <Li>3D modeling using Blender 3D software</Li>
         <li>Putting together stream engine models</li>
     </ul>
-    
+   <footer>
+        Copyright © 2024 Richard Bickings. All Rights Reserved.
+    </footer> 
 </body>
 </html>
